# tad_lab3

./: .gitignore  dvc.yaml  pyproject.toml
data/: data.csv.dvc
src/: evaluate.py  prepare.py  train.py
