[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Aleksey Koleznev <fc.fenomen@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
imblearn = "^0.0"
dvc = "^3.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
